--- a/src/shared/components/Filters/FilterPrice/FilterPrice.module.css
+++ b/src/shared/components/Filters/FilterPrice/FilterPrice.module.css
@@ -14,7 +14,7 @@
     transition: ease-in-out 500ms;
 }
 
-.field:hover{
+.field:hover {
     background-color: var(--hover-background-color);
 }
 
@@ -30,5 +30,16 @@
 
     .field {
         height: 36rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .field {
+        height: 36px;
+    }
+
+    .field::placeholder {
+        font-size: 14px;
     }
 }
