--- a/src/shared/components/Filters/FilterSorted/CustomSelect/CustomSelect.module.css
+++ b/src/shared/components/Filters/FilterSorted/CustomSelect/CustomSelect.module.css
@@ -66,10 +66,13 @@
     }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 432px) {
 
+     .dropdown {
+        height: 124px;
+        gap: 8px;
+    }
     .selectButton {
-        height: 36rem;
-        gap: 12rem;
+        font-size: 14px;
     }
 }
